--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "firebase": "^9.21.0",
+    "firestore": "^1.1.6",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "reactfire": "^4.2.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
